Align password vertically in the save bubble on Mac.

In the edit mode it should be center aligned with the "password" label. In the view mode they are
top aligned.

Bug: 774393
Change-Id: I27288ca3069f9609ab03b46aba8b28a95e9da451
Reviewed-on: https://chromium-review.googlesource.com/718858
Reviewed-by: Dominic Battré <battre@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508710}
Former-commit-id: 4f8924b5487b82919c3f4c9892764124044405b8